# vrp-solver

./: .gitignore  README.md  benchmark.py  main.py  pyproject.toml  serve.py  solomon_benchmark.py
data/: drivers_sample.csv  generate_history.py  historical_orders.csv  kathmandu_drivers.csv  kathmandu_mixed.csv  orders_sample.csv
results/: assignments.csv  routes_map.html  solomon_report.md  solomon_results.csv
src/: __init__.py  constraints.py  demand_forecast.py  distance.py  dynamic.py  fitness.py  greedy.py  local_search.py  models.py  nsga2.py  operators.py  preposition.py  visualization.py
src/tests/: test_core.py
